--- a/stream-rabbitmq-consumer8804/src/main/resources/application.yml
+++ b/stream-rabbitmq-consumer8804/src/main/resources/application.yml
@@ -21,11 +21,12 @@ spring:
           destination: studyExchange # 表示要使用的exchange名称定义
           content-type: application/json # 设置消息类型，本次为json，文本则设为text/plain
           binder: defaultRabbit # 设置要绑定的消息服务的具体设置
-          #group: atguiguA
+          #配置分组
+          group: cloudA
 eureka:
   client:
     service-url:
-      defaultZone: http:localhost:7001/eureka
+      defaultZone: http://localhost:7001/eureka
   instance:
     lease-renewal-interval-in-seconds: 2 # 设置心跳的间隔时间，默认30
     lease-expiration-duration-in-seconds: 5 # 超过5秒间隔，默认90
